# Trustable-Binary-POC

./: .gitignore  README.md  how_test_the_sample_file.md
config/: portable_config.json
scripts/: compile_and_populate.py  create_squashfs.py  generate_sbom.py  portable_env.sh  sbom_validation.py  validate_config.py
scripts/data/schemas/: portable_config_schema.json
src/: CMakeLists.txt  KeyValueServer.cpp  KeyValueServer.h  main.cpp
units/: key-value-server-1.0.0.service
